--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
      
     steps:
-      - name: Install dependencies
-        run: |
-          python3 -m venv env;source env/bin/activate
+      - uses: actions/checkout@v2
+
+      - name: Build the docker image
+        run: docker build -t flask_application .
 
           
 
