--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
      
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        
       - name: Build the docker image
         run: pwd && ls -al 
         
