--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build the docker image
-        run: pwd && ls -al 
+        run: docker build -t flask_application .
         
           
 
