--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,10 +13,8 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build the docker image
-        run: docker build -t flask_application .
+        run: |
+          docker build -t flask_application .
+          docker save flask_application > flask_application.tar.gz
         
-          
-
-    
-
       
