--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build the docker image
-        run: |
-          docker build -t flask_application .
-          docker save flask_application > flask_application.tar.gz
+        run: docker build -t flask_application .
+        
+      - name: Save the docker image
+        run: docker save flask_application > flask_application.tar.gz
         
       
