--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -18,4 +18,6 @@ jobs:
       - name: Save the docker image
         run: docker save flask_application > flask_application.tar.gz
         
+      - name: test
+        run: echo "test"
       
