--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,12 +12,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         
-      - name: Build the docker image
-        run: docker build -t flask_application .
+      - name: jfrog/setup-jfrog-cli@v3
+        run: jf --version
         
-      - name: Save the docker image
-        run: docker save flask_application > flask_application.tar.gz
-        
-      - name: test
-        run: echo "test"
+     
       
