--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,7 +28,10 @@ jobs:
           JFROG_URL: ${{ secrets.JFROG_URL }}
           JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
           JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
-        
-      - run:  jfrog rt ping
+          
+      - uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: test/flask_application.tar.gz
           
       
