--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,14 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         
-      - name: create an directory
-        run: mkdir test
-        
       - name: Build the docker image
-        run:  
-          docker build -t flask_application .
-          docker save flask_application > flask_application.tar.gz
-          cd ..
+        run: docker build -t flask_application .
+        
+      - name: Save the docker image
+        run: docker save flask_application > flask_application.tar.gz
         
       - name: test
         run: echo "test"
@@ -27,11 +24,3 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v3
         with:
           version: latest
-        env:
-          JFROG_URL: ${{ secrets.JFROG_URL }}
-          JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
-          JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
-          
-      - run: jf rt ping 
-          
-      
