--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,10 +24,11 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v3
         with:
           version: latest
+        env:
+          JFROG_URL: ${{ secrets.JFROG_URL }}
+          JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
+          JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
           
       - name: Jfrog
-        run: |
-          echo ${{ secrets.JFROG_PASSWORD }}
-          echo ${{ secrets.JFROG_URL }}
-          echo ${{ secrets.JFROG_USERNAME }}
+        run: jf rt ping
         
