--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,7 +19,7 @@ jobs:
       #  run: docker save flask_application > flask_application.tar.gz
         
       - name: test
-        run: echo "test"
+        run: echo "tests"
         
       - uses: jfrog/setup-jfrog-cli@v3
         with:
