--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,11 +24,7 @@ jobs:
       - uses: jfrog/setup-jfrog-cli@v3
         with:
           version: latest
-        env:
-          JFROG_URL: ${{ secrets.JFROG_URL }}
-          JFROG_USERNAME: ${{ secrets.JFROG_USERNAME }}
-          JFROG_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
           
       - name: Jfrog
-        run: jf rt ping
+        run: jf rt ping --url=5.206.170.171:8081/artifactory/
         
