--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -35,6 +35,6 @@ jobs:
        uses: actions/upload-artifact@v3.1.2
        with:
         name: tar file
-        path: flask_application
+        path: /home/runner/work/Flask_application/Flask_application
         
         
